--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,8 @@
-// GENERICS
+// FONTS
+
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
-    font-family: 'Open Sans', sans-serif;
-    background: rgb(0, 0, 0);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 47%, rgba(0, 69, 252, 1) 100%);
+    font-family: 'Press Start 2P', cursive;
+    background: rgb(3, 3, 67);
 }
